# tq-mtopt

./: .gitignore  pyproject.toml
.github/workflows/: cd.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  lint.yml  tests.yml
docs/source/: conf.py
paper/: paper.md
tests/: test_optimization.py  test_qtt.py  test_representation.py
tq_mtopt/: __init__.py  representation.py
tq_mtopt/examples/benchmarking/: benchmark_optimization.py  benchmark_representation.py  functions.py  run_comparison.sh
