[project]
name = "tq-mtopt"
version = "0.1.0"
description = "Tensor rank cross and matrix train optimizers."
authors = [
    { name = "Roman Ellerbrock", email = "re@terraquantum.swiss" },
    { name = "Aleksandr Berezutskii", email = "albe@terraquantum.swiss" },
]
license-files = ["LICENSE.md", "NOTICE.md"]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.3.4,<3.0.0",
    "scipy>=1.16.3,<2.0.0",
    "networkx>=3.6.1,<4.0",
    "pandas>=2.3.3,<3.0.0",
    "nbformat>=5.10.4,<6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.13"
pylint = "^4.0.5"
plotly-stubs = "0.1.3"
matplotlib-stubs = "0.3.11"

[tool.poetry.group.benchmarking.dependencies]
matplotlib = "^3.10.9"
tqdm = "^4.67.1"


[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
sphinx-rtd-theme = ">=2.0"
sphinx-autodoc-typehints = ">=2.0"

[tool.poetry]
packages = [{ include = "tq_mtopt" }]
